# celery-curl

./: README.md  __init__.py  fastapi.bat  flower.bat  pyproject.toml  worker.bat
celerycurl/: __init__.py  celerytasks.py  fastapi.py
